cabal-version:       2.4
name:                lens-toml-parser
version:             0.3.0.2
synopsis:            Lenses for toml-parser
description:         This library provides lenses for toml-parser.
license:             ISC
license-file:        LICENSE
author:              Henry Till
maintainer:          henrytill@gmail.com
homepage:            https://github.com/henrytill/lens-toml-parser
copyright:           Copyright (c) 2017-2025, Henry Till
category:            Language, Lenses
build-type:          Simple
tested-with:         GHC ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2

extra-source-files:
  .gitignore
  ChangeLog.md
  README.md
  example/example-v0.4.0.toml

source-repository head
  type:     git
  location: https://github.com/henrytill/lens-toml-parser.git

library
  exposed-modules:     Toml.Lens
  -- other-modules:
  -- other-extensions:
  build-depends:       base        >=4.14 && <5
                     , profunctors >=5.2  && <5.7
                     , text        >=0.2  && <3
                     , time        >=1.9  && <1.13 || >=1.14 && <1.15
                     , toml-parser >=2.0  && <2.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base        >=4.14 && <5
                     , containers  >=0.5  && <0.8
                     , dwergaz     >=0.3  && <0.4
                     , lens-family >=2.1  && <2.2
                     , text        >=0.2  && <3
                     , toml-parser >=2.0  && <2.1
                     , lens-toml-parser
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
